# cvrptw

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT_GUIDE.md  FINAL_SUMMARY.md  LICENSE  PORTFOLIO_SUMMARY.md  PROJECT_READY.md  README.md  pyproject.toml  run_tests.py  vrp_benchmark.py  vrp_verify.py
.github/workflows/: tests.yml
cvrptw/: __main__.py  distance.py  distance_vrp.py  graph_routes.py  input_data_generator.py  live_vrp.py  notw_vrp.py  process_solution.py  quick_vrp.py  scheduled_vrp.py  solver.py  test_data.py  time_vrp.py  utils.py  vrp_model.py  vrp_parameters.py
examples/: vrp_ex.py  vrp_ex_1.py  vrp_ex_different_vehicles.py  vrp_penalties.py  vrp_pudel_ex.py  vrp_pudel_tw_ex.py  vrp_reuse_ex.py  vrp_tw_ex.py
examples/configs/: config.example.json  demo_config.json
examples/notebooks/: demo.ipynb
tests/: 001_3_orders_config_time.json  001_3_orders_output_distance.json  002_50_orders_config_distance.json  002_50_orders_config_live.json  002_50_orders_output_distance.json  002_50_orders_output_live.json  00a_3_orders_config.json  demo_orders.csv  example_3_orders_input.csv  realistic_10_orders.csv
